Plans routes (#183)
* set up

* stub routes

* payload

* actual payload

* new plan route

* fit routes to yaml

* actually init route

* fix yaml

* get plans

* example plan, stub remaining routes

* plans services

* init plans routes

* move sample plan to plan service
