# postman/api.yaml
@@ -1193,7 +1193,7 @@ components:
           type: string
         class:
           type: string
-        performance:
+        annualized_performance:
           description: "Annualised Percentage Performance"
           type: number
           format: float64
@@ -1223,7 +1223,9 @@ components:
         date:
           type: integer
         schema:
-          $ref: "#/components/schemas/AllocationChange"
+          type: array
+          items:
+            $ref: "#/components/schemas/AllocationChange"
 
     AllocationChange:
       type: object
@@ -1266,8 +1268,10 @@ components:
       properties:
         trigger:
           $ref: "#/components/schemas/TimeInterval"
-        change:
-          $ref: "#/components/schemas/AssetChange"
+        changes:
+          type: array
+          items:
+            $ref: "#/components/schemas/AssetChange"
 
     Event:
       type: object
@@ -1280,7 +1284,7 @@ components:
           type: string
         start:
           type: integer
-          # format: int64
+          format: int64
         transforms:
           type: array
           items:
@@ -1300,7 +1304,7 @@ components:
         allocations:
           type: array
           items:
-            $ref: "#/components/schemas/Transform"
+            $ref: "#/components/schemas/Allocation"
         events:
           type: array
           items:
