# server/src/services/timeseries/mod.rs
@@ -2,13 +2,11 @@
 pub mod TimeseriesService {
     use crate::common::{errors::ApiError, Money};
     use crate::controllers::timeseries_controller::{TimeseriesEntry, TimeseriesResponse};
-    use crate::models::plan_model::{
-        Allocation, AllocationChange, Asset, AssetChange, Event, Plan, Transform,
-    };
-    use crate::models::recurring_model::{Recurring, TimeInterval, Typ};
+    use crate::models::plan_model::{Allocation, Plan};
+    use crate::models::recurring_model::Recurring;
     use crate::models::user_model::{Snapshot, User};
     use crate::services::finchplaid::ApiClient;
-    use crate::services::users::UserService;
+    use crate::services::{plans::PlansService, users::UserService};
     use actix_web::web::Data;
     use chrono::{offset, Duration, TimeZone, Utc};
     use rust_decimal::prelude::ToPrimitive;
@@ -127,67 +125,6 @@ pub mod TimeseriesService {
             .collect()
     }
 
-    fn generate_sample_plan() -> Plan {
-        let recurrings = vec![Recurring {
-            id: None,
-            name: String::from("Test Recurring"),
-            start: (offset::Utc::now()).timestamp(),
-            end: (offset::Utc::now()).timestamp(),
-            principal: dec!(0.0),
-            amount: dec!(0.0),
-            interest: dec!(0.0),
-            frequency: TimeInterval {
-                typ: Typ::Monthly,
-                content: 1,
-            },
-        }];
-
-        let test_asset = Asset {
-            name: String::from("Finch Savings Account"),
-            class: String::from("Savings Account"),
-            annualized_performance: dec!(1.05),
-        };
-
-        let test_change = AllocationChange {
-            asset: test_asset,
-            change: dec!(100.0),
-        };
-
-        let test_allocation = Allocation {
-            description: String::from("A Test Allocation"),
-            date: offset::Utc::now().timestamp(),
-            schema: vec![test_change],
-        };
-        let allocations = vec![test_allocation];
-
-        let events = vec![Event {
-            name: String::from("Test Event"),
-            start: offset::Utc::now().timestamp(),
-            transforms: vec![Transform {
-                trigger: TimeInterval {
-                    typ: Typ::Monthly,
-                    content: 1,
-                },
-                changes: vec![AssetChange {
-                    asset: Asset {
-                        name: String::from("A Test Asset"),
-                        class: String::from("Stock"),
-                        annualized_performance: dec!(1.2),
-                    },
-                    change: dec!(10.0),
-                }],
-            }],
-        }];
-
-        Plan {
-            id: None,
-            name: String::from("Test Plan"),
-            recurrings: recurrings,
-            allocations: allocations,
-            events: events,
-        }
-    }
-
     pub async fn get_timeseries(
         mut user: User,
         days: i64,
@@ -197,7 +134,7 @@ pub mod TimeseriesService {
         let plan = if user.plans.len() > 0 {
             user.plans[0].clone()
         } else {
-            generate_sample_plan()
+            PlansService::generate_sample_plan()
         };
         let snapshots = user_service.get_snapshots(&mut user, plaid_client).await?;
         let last_day = snapshots[snapshots.len() - 1].clone();
